--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "install": "^0.13.0",
     "next": "15.3.3",
+    "next-themes": "^0.4.6",
     "npm": "^11.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
